# ddia_analyzer

./: README.md  analysis_results_published.txt  pyproject.toml  results.txt
ddia_analyzer/: ocel2.py
generated_pnml/: container-logistics_Container.pnml  container-logistics_Customer Order.pnml  container-logistics_Forklift.pnml  container-logistics_Handling Unit.pnml  container-logistics_Transport Document.pnml  container-logistics_Truck.pnml  container-logistics_Vehicle.pnml  lrm-hiring_Assessment.pnml  lrm-hiring_Candidate.pnml  lrm-hiring_HiringManager.pnml  lrm-hiring_Interviewer.pnml  lrm-hiring_JobRequisition.pnml  lrm-hiring_Recruiter.pnml  lrm-hospital-patient_Bed.pnml  lrm-hospital-patient_DiagnosticEquipment.pnml  lrm-hospital-patient_InsuranceCompany.pnml  lrm-hospital-patient_LabTechnician.pnml  lrm-hospital-patient_Nurse.pnml  lrm-hospital-patient_Patient.pnml  lrm-hospital-patient_Physician.pnml  lrm-hospital-patient_Room.pnml  lrm-order-to-cash_CreditNote.pnml  lrm-order-to-cash_Customer.pnml  lrm-order-to-cash_Dispute.pnml  lrm-order-to-cash_Invoice.pnml  lrm-order-to-cash_Order.pnml  lrm-order-to-cash_Payment.pnml  lrm-order-to-cash_Product.pnml  lrm-order-to-cash_Return.pnml  lrm-order-to-cash_Shipment.pnml  lrm-procure-to-pay_Goods Receipt.pnml  lrm-procure-to-pay_Invoice.pnml  lrm-procure-to-pay_Payment.pnml  lrm-procure-to-pay_Purchase Order.pnml  lrm-procure-to-pay_Purchase Requisition.pnml  lrm-procure-to-pay_Supplier.pnml  order-management_customers.pnml  order-management_employees.pnml  order-management_items.pnml  order-management_orders.pnml  (+9 more)
(+6 files in other folders)
